# raylib_platformer

./: CMakeLists.txt  README.md  main.cpp
assets/: player_v1.png.import
assets/aseprite/: player_v2.aseprite  player_v2_idle.aseprite
src/: game.cpp  game.h  main.cpp  player.cpp  player.h  vector_math.h
